fix wrapping issue

--- a/assets/js/blocks/featured-category/editor.scss
+++ b/assets/js/blocks/featured-category/editor.scss
@@ -8,7 +8,7 @@
 		z-index: 10;
 	}
 
-	svg {
+	.components-placeholder__label svg {
 		fill: currentColor;
 		margin-right: 1ch;
 	}
